--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "errorhandler": "^1.5.0",
@@ -27,11 +28,12 @@
     "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.5.0",
-    "mongoose": "^5.4.16",
+    "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
     "nodemailer": "^5.1.1",
     "path": "^0.12.7",
     "q": "^1.5.1",
+    "sinon": "^7.3.0",
     "util": "^0.11.1",
     "validator": "^10.11.0"
   },
