--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon main.js"
+    "start": "nodemon main.js",
+    "jest" :  "setupTestFrameworkScriptFile": "./tests/setup.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
+    "mongodb-memory-server": "^4.2.1",
     "nodemon": "^1.18.10"
   }
 }
