--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon main.js",
-    "jest" :  "setupTestFrameworkScriptFile": "./tests/setup.js"
+    "jest": {
+      "setupTestFrameworkScriptFile": "./tests/setup.js"
+    }
   },
   "repository": {
     "type": "git",
