--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "ejs": "^2.6.1",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
