--- a/client/package.json
+++ b/client/package.json
@@ -30,9 +30,7 @@
     "tslib": "^1.9.0",
     "typescript-collections": "^1.3.2",
     "zone.js": "~0.8.26",
-    "document-register-element": "^1.7.2"
-  },
-  "devDependencies": {
+    "document-register-element": "^1.7.2",
     "@angular-devkit/build-angular": "~0.12.0",
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "^7.2.7",
