--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "nodemailer": "^5.1.1",
     "path": "^0.12.7",
     "q": "^1.5.1",
+    "shortid": "^2.2.14",
     "util": "^0.11.1",
     "validator": "^10.11.0"
   },
