--- a/client/package.json
+++ b/client/package.json
@@ -11,34 +11,30 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/animations": "^7.2.9",
     "@angular/cdk": "^7.3.4",
+    "@angular/cli": "~7.2.3",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
+    "@angular/compiler-cli": "^7.2.7",
     "@angular/core": "~7.2.0",
     "@angular/elements": "^7.2.9",
     "@angular/forms": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
     "@angular/material": "^7.3.4",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "angular-material-source": "github:angular/material",
-    "angular-material": "^1.1.13",
-    "core-js": "^2.5.4",
-    "hammerjs": "^2.0.8",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "typescript-collections": "^1.3.2",
-    "zone.js": "~0.8.26",
-    "document-register-element": "^1.7.2",
-    "@angular-devkit/build-angular": "~0.12.0",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler-cli": "^7.2.7",
-    "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "angular-material": "^1.1.13",
+    "angular-material-source": "github:angular/material",
     "codelyzer": "~4.5.0",
+    "core-js": "^2.5.4",
+    "document-register-element": "^1.7.2",
+    "hammerjs": "^2.0.8",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.0.1",
@@ -47,8 +43,12 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "rxjs": "~6.3.3",
     "ts-node": "~7.0.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "typescript-collections": "^1.3.2",
+    "zone.js": "~0.8.26"
   }
 }
